--- a/package.json
+++ b/package.json
@@ -1,8 +1,24 @@
 {
-  "name": "lockedin-landing-simple",
-  "version": "1.0.0",
+  "name": "lockedin-landing",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "deploy": "gh-pages -d ."
+    "dev": "next dev --turbopack",
+    "build": "next build --turbopack",
+    "start": "next start",
+    "lint": "eslint"
   },
-  "homepage": "https://akhilmukkara.github.io/lockedin-landing-simple"
+  "dependencies": {
+    "framer-motion": "^12.23.22",
+    "next": "15.5.4",
+    "react": "19.1.0",
+    "react-dom": "19.1.0"
+  },
+  "devDependencies": {
+    "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4",
+    "eslint": "^9",
+    "eslint-config-next": "15.5.4",
+    "tailwindcss": "^4"
+  }
 }
